Bug 469826 - Fullscreen dosnt prevent monitor from sleeping
Summary: Fullscreen dosnt prevent monitor from sleeping
Status: RESOLVED FIXED
Alias: None
Product: PlasmaTube
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.04.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Linus Jahn
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-16 00:22 UTC by graves.zack1
Modified: 2023-09-15 01:34 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description graves.zack1 2023-05-16 00:22:37 UTC
SUMMARY
When I play a video in Fullscreen on Firefox or jellyfiny monitor dose not sleep but the screen does sleep when I am watching a video on plasmatube. I would like the screen to stay on and not have to move the mouse to keep watching.


STEPS TO REPRODUCE
1. Screen Energy Saving set to switch off after 2 min
2. Launch and play a video in full screen on plasmatube
3. Two min in the screen turns off 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 aTosser 2023-07-28 14:41:25 UTC
Present in 23.11.70
Frameworks 5.10
Qt 5.15.10

Also, when this is addressed, I believe PlasmaTube should prevent screen locking and monitor sleeping if a video is being played regardless of full screen or not.
Comment 2 Bug Janitor Service 2023-09-15 01:30:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/plasmatube/-/merge_requests/57
Comment 3 Joshua Goins 2023-09-15 01:34:30 UTC
Git commit f02000a6a9fb9c9e12a13937c078c3511e8a423a by Joshua Goins.
Committed on 15/09/2023 at 03:30.
Pushed by redstrate into branch 'master'.

Inhibit sleep when playing a fullscreen video

M  +4    -0    CMakeLists.txt
M  +5    -0    src/CMakeLists.txt
M  +2    -0    src/contents/ui/videoplayer/VideoPlayer.qml
M  +36   -2    src/plasmatube.cpp
M  +3    -0    src/plasmatube.h

https://invent.kde.org/multimedia/plasmatube/-/commit/f02000a6a9fb9c9e12a13937c078c3511e8a423a