Inhibit sleep when playing a fullscreen video

BUG: 469826