src/plasmatube.cpp
@@ -4,9 +4,14 @@
 
 #include "plasmatube.h"
 
+#include <KLocalizedString>
+#include <QDBusConnection>
+#include <QDBusMessage>
+#include <QDBusReply>
+#include <QFutureWatcher>
+#include <QGuiApplication>
 #include <QSettings>
 #include <QStringBuilder>
-#include <QFutureWatcher>
 
 #include "qinvidious/invidiousapi.h"
 
@@ -181,4 +186,33 @@ void PlasmaTube::fetchHistory(qint32 page)
         watcher->deleteLater();
     });
     watcher->setFuture(m_api->requestHistory(page));
+}
+
+void PlasmaTube::setInhibitSleep(const bool inhibit)
+{
+#ifdef HAS_DBUS
+    if (inhibit) {
+        QDBusMessage message = QDBusMessage::createMethodCall(QStringLiteral("org.freedesktop.ScreenSaver"),
+                                                              QStringLiteral("/ScreenSaver"),
+                                                              QStringLiteral("org.freedesktop.ScreenSaver"),
+                                                              QStringLiteral("Inhibit"));
+        message << QGuiApplication::desktopFileName();
+        message << i18n("Playing video");
+
+        QDBusReply<uint> reply = QDBusConnection::sessionBus().call(message);
+        if (reply.isValid()) {
+            screenSaverDbusCookie = reply.value();
+        }
+    } else {
+        if (screenSaverDbusCookie != 0) {
+            QDBusMessage message = QDBusMessage::createMethodCall(QStringLiteral("org.freedesktop.ScreenSaver"),
+                                                                  QStringLiteral("/ScreenSaver"),
+                                                                  QStringLiteral("org.freedesktop.ScreenSaver"),
+                                                                  QStringLiteral("UnInhibit"));
+            message << static_cast<uint>(screenSaverDbusCookie);
+            screenSaverDbusCookie = 0;
+            QDBusConnection::sessionBus().send(message);
+        }
+    }
+#endif
 }
